--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -464,6 +464,10 @@ iframe {
   .navbar-title h5 {
     margin-left: 0px;
   }
+  .navbar-title2 {
+    position: relative;
+    left: -50px;
+  }
 }
 
 .toast-message2 {
@@ -2133,4 +2137,88 @@ iframe {
 
 .noData span {
   font-size: 15px;
+}
+
+.tableLoader {
+  height: 200px;
+}
+
+.contentTable {
+  min-height: 240.5px;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+
+.userSearchContainer {
+  display: flex;
+  flex-direction: row !important;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.totalUserCon {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.totalUserCon span {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.uTotal {
+  font-size: 20px;
+  color: #999;
+}
+
+.searchBarContainerCon {
+  display: flex;
+}
+
+.addUserBtn {
+  margin-left: 20px;
+  height: 45px !important;
+  width: 100px;
+}
+.searchBarContainerCon .searchBarContainer {
+  width: calc(100vw - 100px) !important;
+  max-width: 400px !important;
+}
+
+@media screen and (max-width: 684px) {
+  .userSearchContainer {
+    flex-direction: column !important;
+    align-items: flex-start;
+  }
+  .searchBarContainerCon .searchBarContainer {
+    max-width: 250px !important;
+  }
+}
+
+@media screen and (max-width: 433px) {
+  .searchBarContainerCon .searchBarContainer {
+    max-width: 180px !important;
+  }
+}
+@media screen and (max-width: 365px) {
+  .searchBarContainerCon {
+    flex-direction: column !important;
+    align-items: flex-start;
+  }
+  .addUserBtn {
+    margin-left: 0px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .userSearchContainer {
+    padding-left: 0px;
+  }
+}
+
+@media screen and (max-width: 740px) {
+  .contentTable table {
+    font-size: 12px;
+  }
 }
