feat: added implementation for add user, diabled/enable user and change user password in admin

--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -2222,3 +2222,15 @@ iframe {
     font-size: 12px;
   }
 }
+.disableText {
+  font-size: 15px;
+}
+
+.disableText span {
+  font-weight: bold;
+}
+
+.contentTable table tr td,
+.contentTable table tr th {
+  text-align: center;
+}
