feat: added admin profile

--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -349,6 +349,10 @@ li svg {
   height: 25px !important;
   width: 25px !important;
 }
+.s-31 {
+  height: 31px !important;
+  width: 31px !important;
+}
 
 .s-35 {
   height: 35px !important;
@@ -370,6 +374,10 @@ li svg {
   width: 100px !important;
 }
 
+.s-121 {
+  height: 121px !important;
+  width: 121px !important;
+}
 .s-125 {
   height: 125px !important;
   width: 125px !important;
