--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -622,10 +622,46 @@ iframe {
   border-radius: 10px;
 }
 
-.profileImage img {
+.profileImage img,
+.adminProfileImage img {
   border-radius: 100%;
   height: 80px;
   width: 80px;
+}
+.adminProfileImage {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.adminProfileImage {
+  border: 2px solid gold;
+  border-radius: 100%;
+}
+.adminProfileIconDiv {
+  position: absolute;
+}
+.adminProfileIcon {
+  position: relative;
+  right: 5px;
+  top: -5px;
+  color: gold;
+  height: 20px;
+}
+
+.adminProfileIcon2 {
+  position: relative;
+  right: 0px;
+  top: -15px;
+  color: gold;
+  height: 10px;
+}
+
+.adminProfileIcon3 {
+  position: relative;
+  right: 3px;
+  top: 0px;
+  color: gold;
+  height: 25px;
 }
 
 .profileInfo {
