--- a/frontend/src/styles/read.css
+++ b/frontend/src/styles/read.css
@@ -1,3 +1,9 @@
+#mainReader {
+  height: calc(100vh - 54px);
+}
+.navbar {
+  height: 54px;
+}
 .sidebar2 {
   position: fixed;
   top: 0;
@@ -34,6 +40,7 @@
   margin-left: 350px;
   background-color: transparent;
 }
+
 .hamburger2:hover,
 .hamburger2:active,
 .hamburger3:hover,
@@ -48,6 +55,10 @@
 
 .hamburger3 {
   display: none;
+}
+.readerBody {
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 768px) {
@@ -157,4 +168,179 @@
 .headerRead p {
   margin-left: 20px;
   margin-bottom: 0px;
+}
+
+.activeCourseBanner {
+  width: 100%;
+  height: auto;
+  position: relative;
+  overflow: hidden;
+}
+
+.activeCourseBanner img {
+  width: 100%;
+  height: auto;
+  max-height: 400px; /* Adjust this as needed */
+  object-fit: cover;
+  object-position: center;
+  display: block;
+}
+
+.activeCourseTitle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+
+  text-align: center;
+  padding: 0 1rem;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
+  max-width: 600px;
+  text-wrap: wrap;
+}
+.activeCourseTitle h1 {
+  text-transform: capitalize;
+  font-size: 2rem;
+}
+.activeCourseButtons {
+  display: flex;
+  gap: 2;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  margin-top: 20px;
+}
+.activeCourseButtons button {
+  background-color: white;
+  color: #444;
+  border-radius: 20px;
+  padding: 10px 20px;
+  font-size: 12px;
+  font-weight: bold;
+  margin-right: 20px;
+}
+
+.activeCourseButtons span {
+  font-size: 18px;
+  color: white;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 1);
+  background-color: #00000007;
+  padding: 5px 20px;
+  border-radius: 10px;
+  font-weight: bolder;
+}
+
+@media screen and (min-width: 1306px) {
+  .activeCourseBanner img {
+    max-height: 500px; /* Adjust this as needed */
+  }
+}
+
+@media screen and (min-width: 1487px) {
+  .activeCourseBanner img {
+    max-height: 600px; /* Adjust this as needed */
+  }
+}
+
+.activeCourseBody {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 100px 0px;
+  color: #455358;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: justify;
+  line-height: 1.5;
+  text-indent: 1.5rem;
+  text-align: justify;
+}
+.activeCourseDescription {
+  width: 50vw;
+}
+
+.activeCourseModules {
+  width: 50vw;
+  border-bottom: 1px solid #77777799;
+}
+
+.activeCourseMenu {
+  margin-top: 50px;
+  width: 50vw;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.activeCourseMenu p {
+  font-size: 13px;
+  font-weight: 700;
+  color: #555555cc;
+  margin: 0;
+  text-indent: 0px;
+}
+.activeIntroModule {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  border-top: 1px solid #77777799;
+  padding: 20px 0px;
+  width: 100%;
+}
+
+.activeIntroModule div {
+  width: calc(100% - 40px);
+  text-overflow: ellipsis;
+  overflow: hidden;
+  text-wrap: nowrap;
+}
+
+.activeIntroModule:hover {
+  background-color: #55555522;
+}
+
+.activeIntroModule span {
+  color: #455358;
+  font-size: 15px;
+  margin-left: 10px;
+}
+.activeModuleCircle {
+  border: 2px solid #ccc;
+  border-radius: 100%;
+  margin-right: 20px;
+  width: 15px !important;
+  height: 15px !important;
+}
+
+@media screen and (max-width: 588px) {
+  .activeCourseTitle h1 {
+    font-size: 1.5rem;
+  }
+  .activeCourseDescription {
+    width: 90vw;
+  }
+
+  .activeCourseModules {
+    width: 90vw;
+  }
+
+  .activeCourseMenu {
+    margin-top: 30px;
+    width: 90vw;
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .activeCourseButtons button {
+    padding: 5px 12px;
+    font-size: 10px;
+    width: 110px;
+  }
+
+  .activeCourseButtons span {
+    font-size: 16px;
+    width: 110px;
+  }
 }
