--- a/frontend/src/styles/read.css
+++ b/frontend/src/styles/read.css
@@ -59,6 +59,7 @@
 .readerBody {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
@@ -388,4 +389,12 @@
 .startdiv button span {
   font-size: 20px;
   color: white;
+}
+.timeLeft {
+  margin-top: 20px !important;
+  font-size: 20px;
+  font-weight: 700;
+  color: #e70f0fcc !important;
+  margin: 0;
+  text-indent: 0px;
 }
