--- a/frontend/src/styles/read.css
+++ b/frontend/src/styles/read.css
@@ -460,8 +460,28 @@
   border-radius: 10px;
   font-size: 15px;
   font-weight: bold;
+  cursor: pointer;
+}
+
+.nextbtn:disabled {
+  color: #444;
+  border: 1px solid #444;
+  cursor: default;
 }
 
 .nextbtn:hover {
   background-color: #00000007;
+}
+
+.areyousure {
+  background-color: #000000c7 !important;
+}
+
+.areyousure div {
+  border: none !important;
+}
+
+.areyousure div p {
+  color: white !important;
+  font-size: 16px !important;
 }
