feat: added api to achievement page

--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -2392,3 +2392,12 @@ iframe {
     margin-top: 10px;
   }
 }
+
+.noAchievements {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 50px;
+}
