fix: implemented major fixes all through
Fix add module screen
(Pertaining to file size)

In course read, make the reader body class minHeight: 100% instead of height
Overflow scroll but remove the scrollbar

Make desc text smaller in mobile view

In mobile view, pdf width can't scale to screen width

Remove sia security from the chat bot greeting text

End button should also bring up the are you sure modal

When congratulations screen shows, remove end button and show "back to course" button on the screen

Fix course read history issue

In content library, on mobile, the filter div should have a higher z-index than the loader

The entire card should direct to path, not just the title on the card

In details page, remove ratings

Add padding at the bottom

fix the continue btn on mobile

The header at the top needs more padding top on mobile

Too much right padding on the nav bar on mobile

--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -994,6 +994,7 @@ iframe {
   border-radius: 8px;
   overflow: hidden;
   margin-bottom: 40px;
+  cursor: pointer;
 }
 
 .searchImage {
@@ -1158,6 +1159,8 @@ iframe {
     padding: 20px;
     border-radius: 8px;
     height: fit-content;
+    z-index: 10000;
+    position: relative;
   }
   .searchBody {
     height: calc(100vh - 270px) !important;
@@ -1300,6 +1303,12 @@ iframe {
   font-size: 15px;
 }
 
+@media screen and (max-width: 344px) {
+  .continueBtn span {
+    font-size: 12px;
+  }
+}
+
 .headerTitle div {
   display: flex;
   align-items: flex-start;
@@ -1332,6 +1341,7 @@ iframe {
   align-items: center;
   display: flex;
   flex-direction: column;
+  padding-bottom: 50px;
 }
 
 .collapsibleDiv {
