fix non scrollable div in module crud

--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -1903,8 +1903,14 @@ iframe {
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
+  overflow-y: scroll;
   padding: 20px;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.tab-container::-webkit-scrollbar {
+  display: none;
 }
 
 .tab-header {
