--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -2190,7 +2190,19 @@ iframe {
 }
 
 .courseBodyHeader {
-  align-self: flex-end;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 358px) {
+  .courseBodyHeader {
+    flex-direction: column;
+  }
+  .courseBodyHeader button {
+    width: 180px !important;
+    margin-bottom: 10px;
+  }
 }
 
 .mheader {
@@ -2200,6 +2212,23 @@ iframe {
   justify-content: center;
 }
 
+.mheaderred h3 {
+  color: red;
+}
+
+.topHCourse {
+  display: flex;
+}
+
+@media screen and (max-width: 612px) {
+  .topHCourse {
+    display: block !important;
+  }
+  .green-noti-con {
+    margin-bottom: 10px;
+    width: fit-content;
+  }
+}
 .mheader span {
   font-size: 18px;
   font-weight: bold;
