--- a/frontend/src/styles/read.css
+++ b/frontend/src/styles/read.css
@@ -552,3 +552,8 @@
   font-weight: 700;
   text-shadow: 0 1px 3px #00000007;
 }
+
+#react-doc-viewer {
+  height: auto !important;
+  min-height: 90vh !important;
+}
