--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -710,11 +710,15 @@ iframe {
 
 .greyScroll {
   scrollbar-width: thin;
-  scrollbar-color: #fff #f9f9f9;
+  scrollbar-color: #fff #dedede;
+}
+
+.greyScroll:hover {
+  scrollbar-color: #fff #dedede;
 }
 
 .greyScroll::-webkit-scrollbar {
-  width: 4px;
+  width: thin;
 }
 
 .greyScroll::-webkit-scrollbar-thumb {
@@ -723,7 +727,7 @@ iframe {
 }
 
 .greyScroll::-webkit-scrollbar-track {
-  background-color: #f9f9f9;
+  background-color: #ccc;
 }
 
 .borderedTitle {
@@ -985,6 +989,11 @@ iframe {
 .searchBody {
   height: calc(100vh - 350px);
   margin-bottom: -40px;
+  overflow-y: auto;
+}
+.desktopFilterMain {
+  max-height: calc(100vh - 350px);
+  overflow-y: auto;
 }
 
 .searchResult {
